<resources>
    <string name="app_name">Currency Converter</string>
    <string name="amount">Amount</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="conversion_time">Conversion time</string>
    <string name="convert">Convert</string>
    <string name="today">Today</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="zero" translatable="false">0</string>
    <string name="clear">Clear</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="done">Done</string>
    <string name="enter_money">Enter money</string>
    <string name="coma" translatable="false">,</string>
    <string name="dot" translatable="false">.</string>
    <string name="max_value_input">Max value is</string>
    <string name="value_invalid">Value is invalid</string>
    <string name="min_value_of_integer_input">Min value is 1</string>
    <string name="min_value_of_decimal_input">Min value is 0.01</string>
    <string name="default_image" translatable="false">default image</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="min_value_of_integer_input_allow_zero_hundred">Min value is 0 or 100</string>
    <string name="conversion_rate">Conversion rate</string>
    <string name="conversion_value">Conversion value</string>
    <string name="equal" translatable="false">=</string>
    <string name="other_currencies">Other currencies</string>
    <string name="no_data">No Data</string>
    <string name="update_at">Update at</string>
    <string name="next_update_at">Next update at</string>
    <string name="internet_available">Network connection available</string>
    <string name="internet_not_available">Network connection not available</string>
    <string name="enter_code_currency">Enter code currency</string>
    <string name="money_conversion_not_valid">The conversion amount must be greater than 0</string>
    <string name="check_internet_and_try_again">Network connection unavailable. Please check your connection and try again.</string>
    <string name="processing">Processing...</string>
</resources>