<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_dialog"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <vn.xdeuhug.currency_converter.base.wiget.AppTextViewBold
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius_top_8dp"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/enter_money"
            android:textAllCaps="true"
            android:textColor="@color/orange_900"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp_8"
            android:paddingVertical="@dimen/dp_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <vn.xdeuhug.currency_converter.base.wiget.AppTextViewBold
                    android:id="@+id/tvInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:background="@drawable/bg_form_input_blue_100"
                    android:gravity="center|end"
                    android:hint="@string/zero"
                    android:padding="@dimen/dp_4"
                    android:singleLine="true"
                    android:ellipsize="none"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="4.0">

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKeyReset"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/clear" />

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKeyMinus"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/decrease" />

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKeyPlus"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_marginEnd="0.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/increase" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0.0dp"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingBottom="@dimen/dp_8"
                    app:cardCornerRadius="@dimen/dp_8">

                    <ImageButton
                        android:id="@+id/btnKeyBack"
                        style="@style/TextViewNumberDark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_dialog"
                        android:contentDescription="@string/default_image"
                        android:src="@drawable/ic_delete_text_red" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey7"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_7" />

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey8"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_8" />

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey9"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_marginEnd="0.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey4"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_4" />

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey5"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_5" />

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey6"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_marginEnd="0.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey1"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_1" />

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey2"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_2" />

                <vn.xdeuhug.currency_converter.base.wiget.AppButton
                    android:id="@+id/btnKey3"
                    style="@style/TextViewNumberDark"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_8"
                    android:layout_marginEnd="0.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_dialog"
                    android:gravity="center"
                    android:text="@string/_3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.0">

                    <vn.xdeuhug.currency_converter.base.wiget.AppButton
                        android:id="@+id/btnKey0"
                        style="@style/TextViewNumberDark"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/dp_48"
                        android:layout_margin="@dimen/dp_8"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_dialog"
                        android:gravity="center"
                        android:text="@string/zero"
                        tools:ignore="NestedWeights" />

                    <vn.xdeuhug.currency_converter.base.wiget.AppButton
                        android:id="@+id/btnKey000"
                        style="@style/TextViewNumberDark"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/dp_48"
                        android:layout_margin="@dimen/dp_8"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_dialog"
                        android:gravity="center"
                        android:text="@string/coma"
                        android:visibility="visible" />

                    <vn.xdeuhug.currency_converter.base.wiget.AppButton
                        android:id="@+id/btnKeyDot"
                        style="@style/TextViewNumberDark"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/dp_48"
                        android:layout_margin="@dimen/dp_8"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_dialog"
                        android:gravity="center"
                        android:text="@string/dot"
                        android:visibility="gone" />

                    <vn.xdeuhug.currency_converter.base.wiget.AppButton
                        android:id="@+id/btnAccept"
                        style="@style/TextViewNumberDark"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/dp_48"
                        android:layout_margin="@dimen/dp_8"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_dialog"
                        android:backgroundTint="@color/orange_900"
                        android:gravity="center"
                        android:text="@string/done"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>