<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/dp_4"
    app:cardElevation="@dimen/dp_4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_16">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnClose"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/ic_close"
                android:tint="@color/text_common_color" />

            <vn.xdeuhug.currency_converter.base.wiget.AppTextViewBold
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginVertical="@dimen/dp_16"
                android:text="@string/choose_currency"
                android:textSize="@dimen/sp_24" />
        </RelativeLayout>

        <vn.xdeuhug.currency_converter.base.wiget.SearchViewCustom
            android:id="@+id/svCurrency"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginVertical="@dimen/dp_8"
            android:background="@drawable/bg_edit_text"
            android:focusable="false"
            android:gravity="center_vertical"
            android:theme="@style/SearchView"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/enter_code_currency"
            app:searchIcon="@drawable/ic_search" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_currency" />

                <LinearLayout
                    android:id="@+id/llEmptyData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_120"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_160"
                        android:layout_height="@dimen/dp_160"
                        android:src="@drawable/empty_currency" />

                    <vn.xdeuhug.currency_converter.base.wiget.AppTextView
                        style="@style/TextNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:text="@string/no_data"
                        android:textSize="@dimen/sp_24" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</androidx.cardview.widget.CardView>